log transformed bubble plot

--- a/Scripts/Initial_Analysis.Rmd
+++ b/Scripts/Initial_Analysis.Rmd
@@ -3001,15 +3001,28 @@ Buble_data <- Eez_d_hist %>%
             by = c("sau_fishing_entity","tresh")) %>% 
   filter(tresh == tresh_list[i],
          variable == "value") %>% 
-  mutate(sum_value_mi = sum_value/1000000) %>%   # Million usd
+  mutate(
+    weight_toe = sum_value/mean_yr,
+    sum_value_mi = sum_value/1000000000,
+         logvalue = log10(sum_value)
+         ) %>%   # Billion usd
   left_join(Matching_names,
             by = c("sau_fishing_entity","fishing_entity_id")) %>% 
   distinct(sau_fishing_entity,.keep_all = TRUE) %>% 
   filter(!is.na(un_geo_region)) %>% 
   ungroup() %>% 
   mutate(
-    sau_fishing_entity = ifelse(sum_value_mi >= 1000 & !sau_fishing_entity %in% c("Spain"), paste(sau_fishing_entity,"*",sep = ""),sau_fishing_entity)
+    sau_fishing_entity = ifelse(sum_value_mi >= 1 & !sau_fishing_entity %in% c("Spain"), paste(sau_fishing_entity,"*",sep = ""),sau_fishing_entity)
   )
+
+
+# Labels Data
+
+Labels_data <- tibble(
+  x = c(2020,2040,2070),
+  y = c(0.3,0.3,9.1),
+  label = c("Early emergence", "Late emergence","Fisheries over the 75 percentile")
+)
 
 
 # Plot the bubbles!
@@ -3018,36 +3031,50 @@ ggplot(Buble_data) +
   geom_point(
     aes(
       x = mean_yr,
-      y = sum_value_mi,
+      # y = sum_value_mi,
+      y = logvalue,
       size = n_taxa,
       colour = un_geo_region
     ),
     alpha = 0.7
   ) +
-  # scale_size(range = c(.1, 10), name="Fishing revenue (USD)")  +
-  geom_label_repel(data = subset(Buble_data, sum_value_mi >= 1000),
+  geom_vline(xintercept = 2030, color = "grey90", size = 0.5) +
+  geom_hline(yintercept = 9, color = "grey90", size = 0.5)  +
+  geom_label_repel(data = subset(Buble_data, sum_value_mi >= 1),
                    aes(
                      x = mean_yr,
-                     y = sum_value_mi,
+                     # y = sum_value_mi,
+                     y = logvalue,
                      label = sau_fishing_entity
                    ),
-                   arrow = arrow(length = unit(0.009, "npc"), 
+                   arrow = arrow(length = unit(0.009, "npc"),
                                  type = "closed",
                                  ends = "first"),
-                   force = 2,
+                   force = 3,
                    box.padding = 2,
                    fill = "NA"
-                   
+
+  ) +
+  geom_text(data = Labels_data,
+    aes(
+      x = x,
+      y = y,
+      label = label
+    ),
+    size = 3,
+    color = "grey30"
   ) +
   # scale_fill_viridis(discrete = F)
-  scale_color_viridis(name="Georaphic Region",
+  scale_color_viridis(name="Region",
                       discrete = T) +
   scale_x_continuous("Average time of emergence",
-                     breaks = seq(2000,2080,20)
+                     limits = c(2000,2080),
+                     breaks = seq(2000,2080,10)
   ) +
-  scale_y_continuous("Fishing revenue (million)",
-                     breaks = seq(1000,5000,1000),
-                     labels = scales::dollar
+  scale_y_continuous("Fishing revenue (log10)",
+                     limits = c(3,12),
+                     breaks = seq(3,12,3),
+                     expand = c(0,0)
   ) +
   scale_size("Number of\nemerging taxa") +
   ggsave("./Figures/bubble_plot.png",
